# darwinian_evolver

./: .gitignore  .offload-image-cache  README.md  offload.toml  pyproject.toml
.github/workflows/: test-offload.yml
darwinian-evolver/: __main__.py  cli_common.py  evolver.py  git_based_problem.py  git_based_problem_test.py  learning_log_view.py  population.py  population_test.py  problem_test.py  test_utils.py
darwinian-evolver/imbue_experiments/: arc_visualizer.html  run_arc.py
darwinian-evolver/problems/: arc_agi_poetiq.py  multiplication_verifier.py  parrot.py  registry.py
darwinian-evolver/scripts/: eval_hyperparameters.py
darwinian_evolver/: evolve_problem_loop.py  evolve_problem_loop_test.py  evolver_test.py  learning_log.py  learning_log_view_test.py  lineage_visualizer.html  problem.py  storage.py
darwinian_evolver/imbue_experiments/: arc_grid_visualizer.html  run_arc.py
darwinian_evolver/problems/: __init__.py  arc_agi.py  circle_packing.py  multiplication_verifier.py  parrot.py
scripts/: offload-tests.sh
